[project]
name = "pytorch-machine-learning"
version = "0.0.1"
description = "Another PyTorch Machine Learning Project"
authors = [
    {name = "Mooh"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
